# FJU-TronClass-MCP

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  cas-login-notes.md  ethics.md
skills/: SKILL.md
src/fju_tronclass/: __init__.py  __main__.py  config.py  errors.py  logging.py
src/fju_tronclass/auth/: cookie_store.py  playwright_login.py  session_probe.py
src/fju_tronclass/cli/: _helpers.py  app.py
src/fju_tronclass/cli/commands/: activities.py  bulletins.py  courses.py  download.py  login.py  todos.py  video.py
src/fju_tronclass/client/: http.py  tronclass.py
src/fju_tronclass/mcp_server/: _client_factory.py  server.py
src/fju_tronclass/mcp_server/tools/: activity_tools.py  auth_tools.py  bulletin_tools.py  course_tools.py  download_tools.py  todo_tools.py  video_tools.py
src/fju_tronclass/models/: activity.py  bulletin.py  course.py  todo.py  upload.py
src/fju_tronclass/services/: bulletins.py  courses.py  downloads.py  search.py  todos.py  video.py
tests/: conftest.py
tests/fixtures/: activities_read.json  course_activities.json  course_bulletins.json  my_courses.json  todos.json  upload_meta.json  upload_url.json
tests/integration/: test_mcp_tool_contract.py
tests/unit/: test_activities.py  test_cli_helpers.py  test_downloads.py  test_http.py  test_http_errors.py  test_http_extra.py  test_http_ssl.py  test_mcp_tools.py  test_services.py  test_session_probe.py  test_tronclass_client.py  test_tronclass_extra.py  test_video_chunking.py
