[project]
name = "fju-tronclass-mcp"
version = "0.1.0"
description = "輔仁大學 TronClass MCP Server + CLI 工具"
readme = "README.md"
authors = [
    { name = "RX5950XT", email = "123271969+RX5950XT@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "rich>=13.7",
    "keyring>=25",
    "structlog>=24.1",
    "tenacity>=8.3",
]

[project.optional-dependencies]
playwright = ["playwright>=1.47"]

[project.scripts]
fjumcp = "fju_tronclass.cli.app:app"
fju-tronclass-mcp = "fju_tronclass.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fju_tronclass"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.11",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests (requires real server)",
]

[tool.coverage.run]
source = ["src/fju_tronclass"]
omit = [
    "*/cli/*",
    "*/auth/*",
    "*/config.py",
    "*/logging.py",
    "*/__main__.py",
    "*/mcp_server/_client_factory.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "C4", "RET", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
exclude = ["src/fju_tronclass/auth/playwright_login\\.py"]

[[tool.mypy.overrides]]
module = "fju_tronclass.auth.playwright_login"
ignore_missing_imports = true
ignore_errors = true
